# ComfyUI-SVGFullfill

./: README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt
examples/: workflow.json
js/: svg_uploader.js
